resources/less/hakija.less
/* ... */
.application__form-upload-icon {
  font-size: 22px;
}

.application__form-upload-input {
  display: none;
}

.application__form-upload-label {
  align-items: center;
  background-color: @section-header-text;
  border-radius: 3px;
  color: @white;
  cursor: pointer;
  display: flex;
  flex-flow: row nowrap;
  height: 43px;
  justify-content: center;
  width: 211px;
  margin-right: 18px;
  font-size: 14px;
}

.application__form-upload-uploading-spinner {
  .spin;
  margin-left: 10px;
  margin-right: 6px;
}

.application__form-upload-button-add-text {
  margin-left: 10px;
}

.application__form-upload-button-error {
  font-size: 14px;
  color: @sg-color-red;
}

.application__form-upload-button-info {
  font-size: 14px;
  color: @sg-color-gray-2;
}

.application__form-upload-attachment-container {
  margin-top: 6px;
  display: flex;
  align-items: baseline;
}

.application__error-display {
    position: fixed;
    margin-top: 0;
    margin-left: 20px;
    color: red;
    font-weight: bold;
    background-color: white;
    z-index: 10;
    border: solid 1px black;
    border-radius: 3px;
    padding: 10px;
}

.application__form-outer-checkbox-container {
  display: flex;
  flex-flow: column nowrap;
  max-width: 610px;
  width: 100%;
}

.application__form-checkbox {
  display: none;
}

.application__form-checkbox + label {
  align-items: center;
  background-color: @multiple-choice-not-selected-background;
  border-radius: 2px;
  color: @text-color;
  cursor: pointer;
  display: flex;
  flex-flow: row nowrap;
  height: 43px;
  justify-content: flex-start;
  padding: 0px 19px;
  margin-bottom: 1px;
  font-size: 14px;
}

.application__form-checkbox + label.disabled {
  background-color: @separator-color;
  cursor: default;
}

.application__form-checkbox:checked + label {
  background-color: @section-header-text;
  color: @white;
}

.application__form-checkbox:checked + label.disabled {
  background-color: @single-choice-disabled;
}

.application__form-multi-choice-followups-outer-container {
  position: relative;
}

.application__form-multi-choice-followups-container {
  align-items: flex-start;
  background-color: @light-gray;
  display: flex;
  flex-flow: column nowrap;
  padding: 20px;
  position: relative;
  max-width: 610px;
}

.application__form-multi-choice-followups-container .application__form-field {
  margin-left: 0px;
  width: 100%;
}

.application__form-multi-choice-followups-container .application__form-field:last-child {
  margin-bottom: 0;
}

.application__form-multi-choice-followups-indicator {
  position: absolute;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 9px solid @section-header-text;
  top: -1px;
  left: 52px;
  z-index: 1;
}

.application__readonly-adjacent {
  text-align: left;
}

.application__readonly-text, .application__readonly-adjacent {
  max-width: 610px;
}

th.application__readonly-adjacent--header {
  font-weight: 600;
  min-width: 33%;
}

.application__form-single-choice-button-outer-container {
  display: flex;
  flex-flow: row nowrap;
}

.application__form-single-choice-button {
  display: none;
}

.application__form-single-choice-button + label {
  align-items: center;
  background-color: @multiple-choice-not-selected-background;
  color: @text-color;
  cursor: pointer;
  display: flex;
  flex-flow: row nowrap;
  min-height: 43px;
  height: 100%;
  justify-content: center;
  padding: 7px 10px;
  min-width: 100px;
  line-height: 120%;
  font-size: 14px;
}

.application__form-single-choice-button + label.disabled {
  background-color: #E6E6E6;
  cursor: default;
}

.application__form-single-choice-followups-indicator {
  position: absolute;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 9px solid @section-header-text;
  top: 100%;
  left: 40px;
  z-index: 1;
}

.application__form-single-choice-button-inner-container {
  position: relative;
}

.application__form-single-choice-button-inner-container:first-child label {
  border-radius: 3px 0 0 3px;
}

.application__form-single-choice-button-inner-container:last-child label {
  border-radius: 0 3px 3px 0;
}

.application__form-single-choice-button-outer-container > .application__form-single-choice-button-inner-container:not(:last-child) {
  margin-right: 1px;
}

.application__form-single-choice-button:checked + label {
  color: @white;
  background-color: @section-header-text;
}
.application__form-single-choice-button:checked + label.disabled {
  background-color: @single-choice-disabled;
}

.application__text-field-paragraph {
  display: inline-block;
  &:first-child {
    margin-top: 0px;
  }
  &:last-child {
    margin-bottom: 0px;
  }
}

.application__form-adjacent-text-fields-wrapper {
  display: flex;
  flex-wrap: wrap;
  a {
    align-self: flex-end;
    margin-bottom: 23px;
  }
}

.application__form-adjacent-row {
  display: flex;
  flex-flow: column wrap;
  margin-right: 10px;
  margin-bottom: 10px;
}

.application__form-adjacent-row label span {
  font-weight: 300;
}

.application__form-adjacent-row--mobile-only {
  display: none;
}

.application__form-adjacent-row--desktop-only {
  display: block;
}
/* ... */

